fix: Fix database, filter product
